--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clothing-store</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navbar">
+        <h2>Shopping-cart</h2>
+        <div class="cart">
+            <i class="bi bi-cart2"></i>
+            <div class="cartAmount" id="cartAmount">0</div>
+        </div>
+    </div>
 
-<h1>Hello everyone</h1>
 
 <script src="main.js"></script>    
 </body>
