--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h2>Shopping-cart</h2>
+        <h2>Clothing Store</h2>
         <div class="cart">
             <i class="bi bi-cart2"></i>
             <div class="cartAmount" id="cartAmount">0</div>
