--- a/index.html
+++ b/index.html
@@ -13,8 +13,21 @@
         <h2>Clothing Store</h2>
         <div class="cart">
             <i class="bi bi-cart2"></i>
-            <div class="cartAmount" id="cartAmount">0</div>
+            <div class="cartAmount" id="cartAmount">10</div>
         </div>
+    </div>
+
+    <div class="shop" id="shop">
+        <div class="item">
+            <img width="200px" src="images/child.jpg" alt="">
+            <div class="details">
+                <h3>Child shirt</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
     </div>
 
 
