--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
 
     <div class="shop" id="shop">
         <div class="item">
-            <img width="200px" src="images/child.jpg" alt="">
+            <img width="210px" src="images/child.jpg" alt="">
             <div class="details">
                 <h3>Child shirt</h3>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. animi voluptatem, placeat.</p>
+                <div class="price-quantity">
+                    <h4>$45</h4>
+                    <div class="buttons">
+                        <i class="bi bi-plus-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-dash"></i>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="item"></div>
