--- a/index.html
+++ b/index.html
@@ -26,16 +26,60 @@
                 <div class="price-quantity">
                     <h4>$45</h4>
                     <div class="buttons">
-                        <i class="bi bi-plus-lg"></i>
-                        <div class="quantity">0</div>
                         <i class="bi bi-dash"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-plus-lg"></i>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">
+            <img width="210px" src="images/male.jpg" alt="">
+            <div class="details">
+                <h3>T-Shirt</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. animi voluptatem, placeat.</p>
+                <div class="price-quantity">
+                    <h4>$45</h4>
+                    <div class="buttons">
+                        <i class="bi bi-dash"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img width="210px" src="images/female.jpg" alt="">
+            <div class="details">
+                <h3>Scart</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. animi voluptatem, placeat.</p>
+                <div class="price-quantity">
+                    <h4>$45</h4>
+                    <div class="buttons">
+                        <i class="bi bi-dash"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img width="210px" src="images/female1.jpg" alt="">
+            <div class="details">
+                <h3>Huddy</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. animi voluptatem, placeat.</p>
+                <div class="price-quantity">
+                    <h4>$45</h4>
+                    <div class="buttons">
+                        <i class="bi bi-dash"></i>
+                        <div class="quantity">0</div>
+                        <i class="bi bi-plus-lg"></i>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
 
